i guess it looks somewhat better now? (1st part is a bit more complex to read but now takes use of the compressed memory blocks) maybe i just need to work on my naming conventions...